# daenerys

./: .#example.json  .gitignore  README.md  daenerys.cabal  example.json  stack.yaml
app/: Main.hs
examples/: get-body.json  google.json  list.json  simple-get.json  simple-post.json
src/: Main.hs
src/Network/Daenerys/: Core.hs  IO.hs  IOUtil.hs  Types.hs  Util.hs
test/: CoreSpec.hs
test/Network/Daenerys/: .#IOUtilSpec.hs  CoreSpec.hs  Fixtures.hs  IOSpec.hs  IOUtilSpec.hs
test/examples/: simple-get.json
