name:                daenerys
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Owain Lewis
maintainer:          owain@owainlewis.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable daenerys
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       http-client,
                       http-client-tls,
                       http-types,
                       aeson,
                       containers,
                       bytestring,
                       text,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
