name:                daenerys
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Owain Lewis

maintainer:          owain@owainlewis.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Network.Daenerys.Core
  build-depends:       base >=4.7 && <4.8,
                       http-client,
                       http-client-tls,
                       http-types,
                       case-insensitive,
                       aeson,
                       containers,
                       bytestring,
                       text,
                       mtl,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable daenerys
  main-is: Main.hs
  build-depends:       base >=4.7 && <4.8,
                       http-client,
                       http-client-tls,
                       http-types,
                       case-insensitive,
                       aeson,
                       containers,
                       bytestring,
                       text,
                       mtl,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  ghc-options:
    -Wall
    -Werror
  hs-source-dirs:
    src, test
  build-depends:
    base,
    hspec,
    daenerys,
    containers,
    bytestring,
    text,
    aeson
  default-language:
    Haskell2010
  main-is:
    Spec.hs
  type:
    exitcode-stdio-1.0
